test/fail/parse_fn_def_missing_parens.ms
fn add a: Int32 b: Int32: Int32 {
  return a + b;
};
